--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/cli": "^4.1.16",
     "baseline-browser-mapping": "^2.8.23",
+    "bcryptjs": "^3.0.3",
     "browserslist": "^4.27.0",
     "caniuse-lite": "^1.0.30001753",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "electron-to-chromium": "^1.5.244",
     "escalade": "^3.2.0",
+    "express": "^5.2.1",
     "express-session": "^1.18.2",
     "fraction.js": "^4.3.7",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.3",
     "multer": "^2.0.2",
     "nanoid": "^3.3.11",
     "node-releases": "^2.0.27",
