--- a/package.json
+++ b/package.json
@@ -1,47 +1,31 @@
 {
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
-  },
-  "name": "verification",
+  "name": "fly-social",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@tailwindcss/cli": "^4.1.16",
-    "baseline-browser-mapping": "^2.8.23",
-    "bcryptjs": "^3.0.3",
-    "browserslist": "^4.27.0",
-    "caniuse-lite": "^1.0.30001753",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "electron-to-chromium": "^1.5.244",
-    "escalade": "^3.2.0",
-    "express": "^5.2.1",
-    "express-session": "^1.18.2",
-    "fraction.js": "^4.3.7",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.3",
-    "multer": "^2.0.2",
-    "nanoid": "^3.3.11",
-    "node-releases": "^2.0.27",
-    "nodemailer": "^7.0.10",
-    "normalize-range": "^0.1.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "picocolors": "^1.1.1",
-    "postcss-value-parser": "^4.2.0",
-    "socket.io": "^4.8.1",
-    "source-map-js": "^1.2.1",
-    "update-browserslist-db": "^1.1.4"
-  },
+  "description": "Fly Social Media App",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module"
+  "dependencies": {
+    "@google/generative-ai": "^0.1.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
+  }
 }
